# placement-manager

./: .gitignore  CMakeLists.txt  PlacementManager.pro  README.md  conf.json  main.cpp
ControlMain/: controlmain.cpp  controlmain.h
Conveyor/: conveyor.cpp  conveyor.h
DataControl/: datacontrol.cpp  datacontrol.h
Dynamixel/: dynamixel.cpp  dynamixel.h
IRRobot/: Exception.h  SerialPort.cpp  SerialPort.h  irrobot.cpp  irrobot.h
KeyInput/: keyinput.cpp  keyinput.h
Logger/: logger.cpp  logger.h
MainVisionModule/: Makefile  mainvisionmodule.cpp  mainvisionmodule.h
PlaceVisionModule/: Makefile  placevisionmodule.cpp  placevisionmodule.h
build2/: CMakeCache.txt  Makefile  cmake_install.cmake  placement_manager
build2/logging/: 2020-06-09-13-50-13.txt
build_pi/: CMakeCache.txt  Makefile  cmake_install.cmake  placement_manager
build_pi/logging/: 2020-06-09-16-24-58.txt  2020-06-09-17-24-05.txt  2020-06-09-17-24-36.txt  2020-06-09-17-24-40.txt  2020-06-09-17-25-02.txt  2020-06-09-17-25-31.txt  2020-06-09-17-26-35.txt  2020-06-09-17-27-40.txt  2020-06-09-17-28-02.txt  2020-06-09-17-28-08.txt  2020-06-09-17-28-27.txt  2020-06-09-17-28-32.txt  2020-06-09-17-29-29.txt  2020-06-09-17-29-38.txt  2020-06-09-17-29-57.txt  2020-06-09-17-32-04.txt  2020-06-09-17-33-01.txt  2020-06-09-17-33-31.txt  2020-06-09-17-34-28.txt  2020-06-09-17-35-10.txt  2020-06-09-17-37-49.txt  2020-06-09-17-38-53.txt  2020-06-09-17-39-55.txt  2020-06-09-17-47-50.txt  2020-06-09-17-48-51.txt  2020-06-09-18-02-20.txt  2020-06-09-18-02-44.txt  2020-06-09-18-03-17.txt  2020-06-09-18-04-15.txt  (+116 more)
